add documentate project with my own schema and update readme